[gd_scene load_steps=13 format=3 uid="uid://bjci7wycrepta"]

[ext_resource type="Script" uid="uid://d2gu85mfofrg8" path="res://Screens/you_won_screen.gd" id="1_2i26t"]
[ext_resource type="Texture2D" uid="uid://b51mlghvdx80p" path="res://Assets/HUD/dungeon_background.png" id="2_h8jbv"]
[ext_resource type="FontFile" uid="uid://csv42tgj57qby" path="res://Assets/HUD/trajanpro-bold.otf" id="3_h8jbv"]
[ext_resource type="Texture2D" uid="uid://2barcio7hukf" path="res://Assets/HUD/hugging.png" id="4_jvc3m"]
[ext_resource type="Texture2D" uid="uid://bah0kxxejp8al" path="res://Assets/HUD/gui-lava.jpg" id="4_k8tfe"]
[ext_resource type="Texture2D" uid="uid://drv8sscjbwaib" path="res://Assets/HUD/gui-water.jpg" id="5_b0kjc"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_suncv"]
texture = ExtResource("4_k8tfe")
region_rect = Rect2(6104, 1718, 3553, 462)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_e1e2b"]
texture = ExtResource("4_k8tfe")
region_rect = Rect2(6137, 1025, 3497, 445)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1cyih"]
texture = ExtResource("4_k8tfe")
region_rect = Rect2(6130, 336, 3523, 492)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_b60oc"]
texture = ExtResource("5_b0kjc")
region_rect = Rect2(6058, 1015, 3664, 471)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_w7wop"]
texture = ExtResource("5_b0kjc")
region_rect = Rect2(6058, 1711, 3664, 471)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_etj5x"]
texture = ExtResource("5_b0kjc")
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
region_rect = Rect2(6058, 317, 3664, 471)

[node name="YouWonScreen" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2i26t")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="CanvasLayer"]
position = Vector2(-1, -4)

[node name="Sprite2D2" type="Sprite2D" parent="CanvasLayer/ParallaxLayer"]
position = Vector2(980, 599)
scale = Vector2(1.35938, 1.45117)
texture = ExtResource("2_h8jbv")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
clip_contents = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_right = 300.0
offset_bottom = 300.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer"]
custom_minimum_size = Vector2(1920, 240)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 128
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_h8jbv")
theme_override_font_sizes/font_size = 95
text = "You won!"

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer"]
custom_minimum_size = Vector2(200, 200)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.0
offset_top = -178.0
offset_right = 151.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 164
alignment = 1

[node name="Control" type="Control" parent="CanvasLayer/MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer2/VBoxContainer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -76.0
offset_right = 175.0
offset_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_constants/separation = 32
alignment = 1

[node name="PlayAgainButton" type="Button" parent="CanvasLayer/MarginContainer2/VBoxContainer/Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_bottom = NodePath("../MainMenuButton")
focus_next = NodePath("../MainMenuButton")
theme_override_fonts/font = ExtResource("3_h8jbv")
theme_override_font_sizes/font_size = 42
theme_override_styles/hover = SubResource("StyleBoxTexture_suncv")
theme_override_styles/pressed = SubResource("StyleBoxTexture_e1e2b")
theme_override_styles/normal = SubResource("StyleBoxTexture_1cyih")
text = "Play again"

[node name="MainMenuButton" type="Button" parent="CanvasLayer/MarginContainer2/VBoxContainer/Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../PlayAgainButton")
focus_previous = NodePath("../PlayAgainButton")
theme_override_fonts/font = ExtResource("3_h8jbv")
theme_override_font_sizes/font_size = 42
theme_override_styles/hover = SubResource("StyleBoxTexture_b60oc")
theme_override_styles/pressed = SubResource("StyleBoxTexture_w7wop")
theme_override_styles/normal = SubResource("StyleBoxTexture_etj5x")
text = "Main menu"

[node name="Hugging" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(965, 831)
scale = Vector2(0.461073, 0.434336)
texture = ExtResource("4_jvc3m")

[connection signal="pressed" from="CanvasLayer/MarginContainer2/VBoxContainer/Control/VBoxContainer/PlayAgainButton" to="." method="restart_level"]
[connection signal="pressed" from="CanvasLayer/MarginContainer2/VBoxContainer/Control/VBoxContainer/MainMenuButton" to="." method="open_level_select"]
